--- a/templates/index.html
+++ b/templates/index.html
@@ -41,11 +41,11 @@
 										<li><a href="news.html">News</a></li> -->
 										<li><a href="contact.html">Contact</a></li>
 										{% if user.is_authenticated %}
-										<li>Hello, {{user.first_name}}</li>
-										<li><a href="accounts/logout">Logout</a></li>
+										<li>Hello, {{user.first_name|title}}</li>
+										<li><a href="{% url 'logout_user' %}">Logout</a></li>
 										{% else %}
-										<li><a href="accounts/register">Register</a></li>
-										
+										<li><a href="{% url 'register_user' %}">Register</a></li>
+										<li><a href="{% url 'login_user' %}">Login</a></li>
 										{% endif %}
 									</ul>
 								</nav>
