--- a/templates/login.html
+++ b/templates/login.html
@@ -14,3 +14,4 @@
     <button type="submit" class="btn btn-secondary">Login</button>   
 </form>
 
+<h3><a href="{% url 'register_user' %}">Sign Up</a></h3>
